ENH: add some nav buttons and router

--- a/www/index.html
+++ b/www/index.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Lit + TS</title>
+    <title>Osteoarthritis Biomarkers</title>
     <link rel="stylesheet" href="./src/index.css" />
     <script type="module" src="/src/hasi-app.ts"></script>
   </head>
   <body>
-    <hasi-app>
-      <h1>Vite + Lit</h1>
-    </hasi-app>
+    <hasi-app></hasi-app>
   </body>
 </html>
