ENH: toggle nav sidebar with button

--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,10 @@
     <title>Osteoarthritis Biomarkers</title>
     <link rel="stylesheet" href="./src/index.css" />
     <script type="module" src="/src/hasi-app.ts"></script>
+    <link
+      href="https://fonts.googleapis.com/css?family=Material+Icons&display=block"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <hasi-app></hasi-app>
