ENH: style accordion headers, min height to sections

--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="./src/index.css" />
     <script type="module" src="/src/hasi-app.ts"></script>
     <link
+      href="https://fonts.googleapis.com/css2?family=Roboto"
+      rel="stylesheet"
+    />
+    <link
       href="https://fonts.googleapis.com/css?family=Material+Icons&display=block"
       rel="stylesheet"
     />
